--- a/scss/_userProfile.scss
+++ b/scss/_userProfile.scss
@@ -29,12 +29,10 @@
     grid-template-columns: 70px auto;
     align-items: center;
     .img-inner {
-      border-radius: 15px;
+      border-radius: 50%;
       overflow: hidden;
       img {
         width: 100%;
-        border-radius: 15px;
-        border: 3px solid $secondary;
       }
     }
     .user-name {
@@ -194,6 +192,28 @@
   }
   .main-body {
     padding: 20px 20px 40px 20px;
+  }
+  .form-content {
+    .btns-action {
+      text-align: center;
+      margin-top: 2rem;
+    }
+  }
+  .empty-box {
+    padding: 60px 0;
+    text-align: center;
+    .thumb {
+      width: 140px;
+      margin: 0 auto 1rem auto;
+      img {
+        width: 100%;
+      }
+    }
+    h6 {
+      color: $textGrey;
+      font-weight: 500;
+      margin-bottom: 10px;
+    }
   }
 }
 .btn-usermenu {
@@ -426,6 +446,141 @@
   }
 }
 
+.choose-code-meli {
+  .code-inner {
+    // display: grid;
+    // grid-template-columns: 400px auto;
+    @include displayFlex(flex, center, space-between);
+  }
+  .select-group {
+    flex: 0 0 50%;
+    width: 50%;
+    margin-bottom: 0;
+  }
+  .btns-action {
+    flex: 0 0 50%;
+    width: 50%;
+    @include displayFlex(flex, center, flex-end);
+    .btn {
+      margin-right: 10px;
+    }
+  }
+}
+
+.recipes-list {
+  margin-top: 1rem;
+  .filters {
+    @include displayFlex(flex, center, space-between);
+    h5 {
+      margin-bottom: 0;
+      font-size: 18px;
+    }
+  }
+  .sort {
+    width: 300px;
+    .select-group {
+      margin-bottom: 0;
+    }
+  }
+  .list-inner {
+    margin-top: 1.5rem;
+  }
+}
+
+.card-recipe {
+  margin-bottom: 15px;
+  .card-inner {
+    display: grid;
+    grid-template-columns: 80px auto 180px;
+    background-color: white;
+    box-shadow: $boxshadow2;
+    border-radius: 15px;
+  }
+  .number {
+    @include displayFlex(flex, flex-start, center);
+    span {
+      background: $gradientPrimary;
+      width: 45px;
+      font-size: 14px;
+      font-weight: 600;
+      color: white;
+      display: inline-block;
+      text-align: center;
+      padding: 20px 5px 10px 5px;
+      border-radius: 0 0 10px 10px;
+      border-bottom: 3px solid $secondary;
+    }
+  }
+  .info {
+    padding: 15px;
+    ul {
+      @include displayFlex(flex, center, flex-start);
+      flex-wrap: wrap;
+      li {
+        flex: 1 0 50%;
+        width: 50%;
+        margin: 5px 0;
+        font-size: 14px;
+        font-weight: 400;
+        color: $textGrey;
+        .fi {
+          font-size: 16px;
+          position: relative;
+          top: 3px;
+          color: $textSilver;
+          margin-left: 5px;
+        }
+        span {
+          color: $textDark;
+          &.waiting {
+            background-color: rgba($color: $secondary, $alpha: 0.1);
+            color: $secondary;
+            padding: 5px 10px;
+            font-weight: 600;
+            border-radius: 10px;
+          }
+          &.payment {
+            background-color: rgba($color: $info, $alpha: 0.1);
+            color: $info;
+            padding: 5px 10px;
+            font-weight: 600;
+            border-radius: 10px;
+          }
+          &.error {
+            background-color: rgba($color: $error, $alpha: 0.1);
+            color: $error;
+            padding: 5px 10px;
+            font-weight: 600;
+            border-radius: 10px;
+          }
+          &.success {
+            background-color: rgba($color: $success, $alpha: 0.1);
+            color: $success;
+            padding: 5px 10px;
+            font-weight: 600;
+            border-radius: 10px;
+          }
+        }
+      }
+    }
+  }
+  .btns-action {
+    @include displayFlex(flex, center, center);
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 15px;
+    border-right: 1px solid $borderColor;
+    .btn {
+      padding: 0.5rem;
+      font-size: 14px;
+      font-weight: 600;
+      min-width: unset;
+      width: 100%;
+      margin: 3px 0;
+    }
+  }
+}
+
 @media (max-width: 1400px) {
   .user-dashboard-section {
     .products-list {
@@ -483,6 +638,16 @@
       }
     }
   }
+  .card-recipe {
+    .info {
+      ul {
+        li {
+          flex: 1 0 100%;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 992px) {
@@ -536,6 +701,16 @@
   }
   .notification-center {
     padding: 20px;
+  }
+  .card-recipe {
+    .info {
+      ul {
+        li {
+          flex: 1 0 50%;
+          width: 50%;
+        }
+      }
+    }
   }
 }
 @media (max-width: 768px) {
@@ -591,6 +766,43 @@
   }
   .notification-center {
     padding: 15px;
+  }
+  .choose-code-meli {
+    .select-group {
+      flex: 0 0 40%;
+      width: 40%;
+    }
+    .btns-action {
+      flex: 0 0 60%;
+      width: 60%;
+    }
+  }
+  .card-recipe {
+    .card-inner {
+      grid-template-columns: 80px auto;
+      grid-template-areas: "number info" "btnAction btnAction";
+    }
+    .number {
+      grid-area: number;
+    }
+    .info {
+      grid-area: info;
+      padding: 10px;
+    }
+    .btns-action {
+      grid-area: btnAction;
+      padding: 10px;
+      border-right: none;
+      border-top: 1px solid $borderColor;
+      justify-content: flex-end;
+      align-items: flex-end;
+      flex-direction: row;
+      .btn {
+        width: unset;
+        padding: 0.5rem 1rem;
+        margin: 0 5px 0 0;
+      }
+    }
   }
 }
 @media (max-width: 575px) {
@@ -661,12 +873,66 @@
   .notification-center {
     padding: 10px;
   }
-}
-@media (max-width: 480px) {
-}
-@media (max-width: 450px) {
-}
-@media (max-width: 360px) {
+  .choose-code-meli {
+    .code-inner {
+      flex-wrap: wrap;
+    }
+    .select-group,
+    .btns-action {
+      flex: 0 0 100%;
+      width: 100%;
+    }
+    .btns-action {
+      margin-top: 1rem;
+    }
+  }
+  .recipes-list {
+    margin-top: 2rem;
+    .filters {
+      flex-wrap: wrap;
+    }
+    h5,
+    .sort {
+      flex: 0 0 100%;
+      width: 100%;
+    }
+    .sort {
+      margin-top: 1rem;
+    }
+  }
+  .card-recipe {
+    .card-inner {
+      grid-template-columns: 50px auto;
+    }
+    .number {
+      span {
+        width: 35px;
+        margin-right: auto;
+        font-size: 13px;
+      }
+    }
+    .info {
+      grid-area: info;
+      padding: 15px 15px 8px 8px;
+      ul {
+        li {
+          flex: 1 0 100%;
+          width: 100%;
+          font-size: 13px;
+          margin: 0 0 5px 0;
+          .fi {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+    .btns-action {
+      padding: 8px;
+      .btn {
+        font-size: 13px;
+      }
+    }
+  }
 }
 @media (max-width: 350px) {
   .user-dashboard-section .grid-user-menu {
