--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -1,9 +1,10 @@
 /*#region ----------------- Modals */
-.modal {
-}
 .modal-content {
   border-radius: 20px;
   border: none;
+}
+.modal-dialog {
+  margin-top: 30px;
 }
 .modal-header {
   justify-content: center !important;
@@ -51,6 +52,10 @@
   .title-mini {
     text-align: center;
     margin-bottom: 15px;
+    span {
+      color: $primary;
+      margin: 0 5px;
+    }
   }
   .title-big {
     color: $textDark;
