--- a/scss/partial/_variables.scss
+++ b/scss/partial/_variables.scss
@@ -19,7 +19,7 @@ $warning: #ffe16a;
 $disabled: #d8d8d8;
 $dis_button: #879ac1;
 
-$borderColor: #e7e6e7;
+$borderColor: #d2d2d2;
 
 $background: #f2f2f3;
 
