--- a/scss/main.css
+++ b/scss/main.css
@@ -526,6 +526,12 @@ input[type=number] {
 .radios-group .form-check .form-check-label {
   cursor: pointer;
 }
+.radios-group .form-check .form-check-input {
+  background-color: #f2f2f3;
+}
+.radios-group .form-check .form-check-input:checked {
+  background-color: #18601f;
+}
 
 /*#endregion -------------- Forms */
 /*#region ----------------- Buttons */
@@ -591,7 +597,6 @@ input[type=number] {
   background: transparent;
   color: #fdba4d;
   border: 2px solid #fdba4d;
-  padding: 0.62rem 1.2rem;
 }
 .btn-primary-outline:hover, .btn-primary-outline:focus {
   background: #fdba4d;
@@ -607,12 +612,11 @@ input[type=number] {
 
 .btn-secondary-outline {
   background: transparent;
-  color: #fdba4d;
-  border: 2px solid #fdba4d;
-  padding: 0.62rem 1.2rem;
+  color: #18601f;
+  border: 2px solid #18601f;
 }
 .btn-secondary-outline:hover, .btn-secondary-outline:focus {
-  background-color: #fdba4d;
+  background-color: #18601f;
   color: white;
 }
 
@@ -2964,6 +2968,12 @@ input[type=number] {
   color: #636063;
   margin-left: 5px;
 }
+.factore-details.have-border {
+  padding: 25px;
+  border: 1px solid #d2d2d2;
+  border-radius: 20px;
+  background-color: white;
+}
 
 .notepad {
   margin-top: 2rem;
@@ -2987,6 +2997,96 @@ input[type=number] {
   font-size: 14px;
 }
 
+.card-address {
+  margin-bottom: 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  position: relative;
+}
+.card-address .card-inner {
+  display: grid;
+  grid-template-columns: 40px auto;
+  border: 2px solid #d2d2d2;
+  padding: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.card-address .icon {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  color: white;
+  background-color: white;
+  border: 1px solid #d2d2d2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
+}
+.card-address .info-list li {
+  font-size: 14px;
+  color: #3c3c3c;
+  margin: 4px 0;
+}
+.card-address .info-list li span {
+  color: #636063;
+  margin-left: 5px;
+}
+.card-address .info-list li .fi {
+  margin-left: 5px;
+  font-size: 16px;
+  color: #9e9e9e;
+  position: relative;
+  top: 3px;
+}
+.card-address .dropdown {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+.card-address .dropdown .btn-card-menu {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  background-color: #f2f2f3;
+  color: #9e9e9e;
+  border: none;
+  padding: 2px;
+  font-size: 20px;
+}
+.card-address .dropdown .dropdown-menu .dropdown-item {
+  font-size: 14px;
+  color: #3c3c3c;
+}
+.card-address .dropdown .dropdown-menu .dropdown-item .fi {
+  color: #9e9e9e;
+  font-size: 18px;
+  position: relative;
+  padding-left: 10px;
+  top: 4px;
+}
+.card-address .dropdown .dropdown-menu .dropdown-item:hover, .card-address .dropdown .dropdown-menu .dropdown-item:focus {
+  background: linear-gradient(0deg, #18601f, #5e8f63);
+  color: white;
+}
+.card-address .dropdown .dropdown-menu .dropdown-item:hover .fi, .card-address .dropdown .dropdown-menu .dropdown-item:focus .fi {
+  color: rgba(255, 255, 255, 0.7);
+}
+.card-address.active .card-inner {
+  border-color: #18601f;
+}
+.card-address.active .icon {
+  background: linear-gradient(0deg, #18601f, #5e8f63);
+  border: none;
+}
+.card-address.active .dropdown .btn-card-menu {
+  background-color: rgba(24, 96, 31, 0.15);
+  color: #18601f;
+}
 @media (max-width: 1400px) {
   .user-dashboard-section .products-list .card-course .img-container {
     height: 170px;
@@ -3349,3 +3449,431 @@ input[type=number] {
 }
 
 /*#endregion -------------- Tables */
+/*#region ----------------- Payment */
+.payment-section {
+  padding: 60px 0 120px 0;
+  background: linear-gradient(180deg, white 70%, rgba(255, 255, 255, 0));
+}
+.payment-section .steps {
+  border: 1px solid #d2d2d2;
+  border-radius: 20px;
+  padding: 20px;
+  position: relative;
+}
+.payment-section .steps ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  margin: 1rem auto 0 auto;
+}
+.payment-section .steps ul li {
+  flex: 0 0 50%;
+  width: 50%;
+  text-align: center;
+  position: relative;
+}
+.payment-section .steps ul li::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 27px;
+  width: 100%;
+  height: 2px;
+  background-color: #d2d2d2;
+  z-index: 0;
+}
+.payment-section .steps ul li:first-child::before {
+  display: none;
+}
+.payment-section .steps ul li .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 54px;
+  height: 54px;
+  margin: 0 auto 10px auto;
+  background-color: #f2f2f3;
+  color: #636063;
+  border-radius: 50%;
+  font-size: 24px;
+  position: relative;
+  z-index: 10;
+}
+.payment-section .steps ul li .text {
+  font-size: 14px;
+  font-weight: 500;
+  color: #636063;
+  white-space: nowrap;
+  display: inline-block;
+  position: relative;
+  z-index: 10;
+}
+.payment-section .steps ul li.active::before {
+  background-color: #fdba4d;
+}
+.payment-section .steps ul li.active .icon {
+  background: linear-gradient(0deg, #fda61b, #fdba4d);
+  color: white;
+}
+.payment-section .steps ul li.active .text {
+  color: #18601f;
+  font-weight: 600;
+}
+.payment-section .logo .img-inner {
+  width: 180px;
+  margin: 0 auto 1rem auto;
+}
+.payment-section .logo .img-inner a {
+  display: block;
+}
+.payment-section .logo .img-inner img {
+  width: 100%;
+}
+.payment-section .grid-layout {
+  display: grid;
+  grid-template-columns: calc(100% - 350px) 350px;
+  margin-top: 1.2rem;
+}
+.payment-section .grid-sidebar .grid-inner {
+  border: 1px solid #d2d2d2;
+  padding: 15px;
+  border-radius: 20px;
+  background-color: white;
+  position: sticky;
+  top: 50px;
+}
+.payment-section .grid-sidebar ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+  border-bottom: 1px solid #d2d2d2;
+}
+.payment-section .grid-sidebar ul li:last-child {
+  border-bottom: none;
+}
+.payment-section .grid-sidebar ul li .name {
+  color: #636063;
+  font-size: 14px;
+  font-weight: 500;
+}
+.payment-section .grid-sidebar ul li .desc {
+  color: #3c3c3c;
+  font-size: 18px;
+  font-weight: 600;
+}
+.payment-section .grid-sidebar ul li .desc small {
+  font-size: 13px;
+  margin-right: 2px;
+}
+.payment-section .grid-sidebar ul li .desc.color-red {
+  color: #ff3333;
+}
+.payment-section .grid-sidebar ul li .desc.color-green {
+  color: #00bd79;
+}
+.payment-section .grid-sidebar .btns-action {
+  margin-top: 1rem;
+}
+.payment-section .grid-sidebar .btns-action .btn {
+  width: 100%;
+}
+.payment-section .grid-information {
+  padding-left: 1.2rem;
+}
+.payment-section .grid-information .btn-back {
+  margin-top: 10px;
+  border: none;
+  padding: 10px 45px 10px 10px;
+  min-width: unset;
+  background-color: transparent;
+}
+.payment-section .grid-information .btn-back .fi {
+  top: 9px;
+}
+.payment-section .grid-information .btn-back:hover {
+  color: #fdba4d;
+}
+
+.card-delivery {
+  border: 1px solid #d2d2d2;
+  padding: 25px;
+  margin-bottom: 1rem;
+  border-radius: 15px;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.card-delivery .card-inner {
+  background-color: white;
+  display: grid;
+  grid-template-columns: 60px 60px auto;
+  align-items: center;
+}
+.card-delivery .check {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #d2d2d2;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  color: white;
+  border-radius: 50%;
+  transition: all 0.2s ease-in-out;
+}
+.card-delivery .check .fi {
+  display: none;
+}
+.card-delivery .icon {
+  font-size: 30px;
+  line-height: 0;
+  color: #9e9e9e;
+}
+.card-delivery .name {
+  font-size: 18px;
+  font-weight: 600;
+  color: #636063;
+  transition: all 0.2s ease-in-out;
+}
+.card-delivery .btn-address {
+  position: absolute;
+  left: 10px;
+  top: 20px;
+  display: none;
+  font-size: 14px;
+  padding: 0.5rem 1rem;
+}
+.card-delivery.active {
+  border-color: #18601f;
+}
+.card-delivery.active .check {
+  background: linear-gradient(0deg, #18601f, #5e8f63);
+  border: none;
+}
+.card-delivery.active .check .fi {
+  display: block;
+}
+.card-delivery.active .name {
+  color: #18601f;
+}
+.card-delivery.active .drugstore-address,
+.card-delivery.active .choose-address {
+  display: block;
+}
+.card-delivery.active .btn-address {
+  display: block;
+}
+
+.drugstore-address {
+  margin-top: 1.2rem;
+  background-color: rgba(24, 96, 31, 0.1);
+  padding: 20px;
+  border-radius: 12px;
+  display: none;
+}
+.drugstore-address h6 {
+  color: #636063;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+.drugstore-address p {
+  margin-bottom: 0;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.choose-address {
+  display: none;
+  margin-top: 2rem;
+}
+.choose-address .your-address {
+  display: grid;
+  grid-template-columns: 40px auto;
+  align-items: center;
+}
+.choose-address .your-address .icon {
+  width: 40px;
+  height: 40px;
+  font-size: 24px;
+}
+.choose-address .your-address .location h5 {
+  font-size: 15px;
+  font-weight: 500;
+  color: #3c3c3c;
+  margin-bottom: 5px;
+}
+.choose-address .your-address .location h6 {
+  font-size: 15px;
+  font-weight: 400;
+  color: #636063;
+  margin-bottom: 0;
+}
+
+.swiper-calendar {
+  border: 1px solid #d2d2d2;
+  border-radius: 15px 15px 0 0;
+  padding: 15px 15px 0 15px;
+  background-color: white;
+}
+.swiper-calendar .swiper-slide {
+  text-align: center;
+  padding: 0 5px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  cursor: pointer;
+}
+.swiper-calendar .swiper-slide.swiper-slide-thumb-active .day-name {
+  color: #18601f;
+}
+.swiper-calendar .swiper-slide.swiper-slide-thumb-active .day-number {
+  border-bottom-color: #fdba4d;
+  font-weight: 800;
+  color: #3c3c3c;
+}
+.swiper-calendar .swiper-slide .day-name {
+  font-size: 16px;
+  font-weight: 400;
+}
+.swiper-calendar .swiper-slide .day-number {
+  margin-bottom: 0;
+  padding-bottom: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #636063;
+  display: inline-block;
+  border-bottom: 4px solid transparent;
+}
+
+.swiper-relative {
+  border: 1px solid #d2d2d2;
+  border-top: none;
+  border-radius: 0 0 15px 15px;
+  padding: 15px;
+  background-color: white;
+}
+.swiper-relative .swiper-slide .form-check {
+  flex: 0 0 33.33%;
+  width: 33.33%;
+  margin: 8px 0;
+  padding-left: 10px;
+}
+.swiper-relative .swiper-slide .form-check .form-check-input {
+  border-color: #636063;
+  top: 2px;
+}
+.swiper-relative .swiper-slide .form-check .form-check-input:checked {
+  border-color: #18601f;
+}
+.swiper-relative .swiper-slide .form-check .form-check-input:checked ~ .form-check-label {
+  color: #fdba4d;
+}
+.swiper-relative .swiper-slide .form-check .form-check-input:checked ~ .form-check-label span {
+  color: #fdba4d;
+}
+.swiper-relative .swiper-slide .form-check .form-check-label {
+  font-size: 16px;
+  font-weight: 400;
+  color: #636063;
+}
+.swiper-relative .swiper-slide .form-check .form-check-label span {
+  font-weight: 600;
+  color: #3c3c3c;
+  font-size: 18px;
+}
+
+@media (max-width: 1199px) {
+  .payment-section .grid-layout {
+    grid-template-columns: calc(100% - 300px) 300px;
+  }
+  .swiper-relative .swiper-slide .form-check {
+    flex: 0 0 50%;
+    width: 50%;
+  }
+}
+@media (max-width: 992px) {
+  .payment-section {
+    padding: 50px 0 100px 0;
+  }
+  .payment-section .grid-layout {
+    grid-template-columns: 100%;
+  }
+  .payment-section .grid-information {
+    padding: 0 0 1.2rem 0;
+  }
+}
+@media (max-width: 768px) {
+  .payment-section .logo .img-inner {
+    width: 120px;
+  }
+  .payment-section .steps {
+    padding: 15px;
+  }
+  .payment-section .steps ul {
+    width: 100%;
+  }
+  .payment-section .steps ul li .icon {
+    width: 48px;
+    height: 48px;
+    font-size: 20px;
+  }
+  .card-delivery {
+    padding: 15px;
+  }
+  .card-delivery .card-inner {
+    grid-template-columns: 40px 35px auto;
+  }
+  .card-delivery .check {
+    width: 24px;
+    height: 24px;
+    font-size: 16px;
+  }
+  .card-delivery .icon {
+    font-size: 24px;
+  }
+  .card-delivery .name {
+    font-size: 16px;
+    padding-left: 140px;
+  }
+  .card-delivery .btn-address {
+    top: 12px;
+    font-size: 12px;
+    padding: 0.4rem 0.8rem;
+  }
+  .choose-address {
+    margin-top: 1.5rem;
+  }
+  .choose-address .your-address .location h5 {
+    font-size: 14px;
+  }
+  .choose-address .your-address .location h6 {
+    font-size: 13px;
+  }
+  .drugstore-address {
+    padding: 15px;
+  }
+  .drugstore-address h6 {
+    font-size: 13px;
+  }
+  .drugstore-address p {
+    font-size: 14px;
+  }
+  .swiper-calendar .swiper-slide .day-name {
+    font-size: 14px;
+    margin-bottom: 0.3rem;
+  }
+  .swiper-calendar .swiper-slide .day-number {
+    font-size: 17px;
+  }
+  .swiper-relative .swiper-slide .form-check .form-check-label {
+    font-size: 14px;
+  }
+  .swiper-relative .swiper-slide .form-check .form-check-label span {
+    font-size: 16px;
+  }
+}
+/*#endregion -------------- Payment */
